language/move-lang/tests/move_check/expansion/restricted_constant_names.exp
error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:4:11 ───
   │
 4 │     const address: u64 = 0;
   │           ^^^^^^^ Invalid constant name 'address'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:5:11 ───
   │
 5 │     const signer: u64 = 0;
   │           ^^^^^^ Invalid constant name 'signer'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:6:11 ───
   │
 6 │     const u8: u64 = 0;
   │           ^^ Invalid constant name 'u8'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:7:11 ───
   │
 7 │     const u64: u64 = 0;
   │           ^^^ Invalid constant name 'u64'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:8:11 ───
   │
 8 │     const u128: u64 = 0;
   │           ^^^^ Invalid constant name 'u128'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:9:11 ───
   │
 9 │     const vector: u64 = 0;
   │           ^^^^^^ Invalid constant name 'vector'. Constant names must start with 'A'..'Z'
   │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:10:11 ───
    │
 10 │     const move_to_sender: u64 = 0;
    │           ^^^^^^^^^^^^^^ Invalid constant name 'move_to_sender'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:11:11 ───
    │
 11 │     const move_to: u64 = 0;
    │           ^^^^^^^ Invalid constant name 'move_to'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:12:11 ───
    │
 12 │     const move_from: u64 = 0;
    │           ^^^^^^^^^ Invalid constant name 'move_from'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:13:11 ───
    │
 13 │     const borrow_global: u64 = 0;
    │           ^^^^^^^^^^^^^ Invalid constant name 'borrow_global'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:14:11 ───
    │
 14 │     const borrow_global_mut: u64 = 0;
    │           ^^^^^^^^^^^^^^^^^ Invalid constant name 'borrow_global_mut'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:15:11 ───
    │
 15 │     const exists: u64 = 0;
    │           ^^^^^^ Invalid constant name 'exists'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:16:11 ───
    │
 16 │     const freeze: u64 = 0;
    │           ^^^^^^ Invalid constant name 'freeze'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:17:11 ───
    │
 17 │     const assert: u64 = 0;
    │           ^^^^^^ Invalid constant name 'assert'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:18:11 ───
    │
 18 │     const Self: u64 = 0;
    │           ^^^^ Invalid module member name 'Self'. 'Self' is restricted and cannot be used to name a module member
    │

